--- a/catherine-ruf.html
+++ b/catherine-ruf.html
@@ -14,7 +14,6 @@
     color: #1a1a1a;
   }
 
-  /* HERO FIX */
   .prospect-hero {
     display: flex;
     justify-content: space-between;
@@ -70,21 +69,23 @@
     opacity: 0.8;
     margin-bottom: 0.25rem;
   }
+
   .grade-score {
     font-family: 'Archivo Black', sans-serif;
     font-size: 1.9rem;
     margin-bottom: 0.1rem;
   }
+
   .grade-tier {
     font-size: 0.8rem;
     font-weight: 600;
   }
+
   .grade-note {
     font-size: 0.75rem;
     opacity: 0.85;
   }
 
-  /* META */
   .prospect-meta {
     display: flex;
     flex-wrap: wrap;
@@ -128,7 +129,6 @@
     margin-left: 1rem;
   }
 
-  /* SECTIONS */
   .prospect-section {
     margin-bottom: 1.25rem;
     padding: 1rem 1.1rem;
@@ -165,7 +165,7 @@
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">CATHERINE RUF</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Player-Coach Leader · Investment Banking Track</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Player-Coach Archetype · Investment Banking Track</p>
       <p class="prospect-subtitle">Columbia University · Rowing 🚣 · Class of 2028</p>
     </div>
 
@@ -173,7 +173,7 @@
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">9.3</div>
       <div class="grade-tier">Round 1–2 Candidate</div>
-      <div class="grade-note">Reliable, consistent, and culture-steadying presence</div>
+      <div class="grade-note">Reliable, steady, and culture-positive contributor</div>
     </div>
   </section>
 
@@ -202,11 +202,19 @@
         <li><span>Cumulative Rank</span><span class="meta-value">9 / 63</span></li>
         <li><span>Phase 1 Rank</span><span class="meta-value">4 / 63</span></li>
         <li><span>Phase 2 Rank</span><span class="meta-value">9 / 30</span></li>
-        <li><span>Personality</span>
-          <span class="meta-value">9. Player-Coach <br>(Principled · Steady · Detail-Aligned)</span>
+        <li>
+          <span>Personality</span>
+          <span class="meta-value">
+            9. Player-Coach<br>
+            (Principled Personality · Stability · Organizing Influence)
+          </span>
         </li>
-        <li><span>Leadership</span>
-          <span class="meta-value">Servant Leader <br>(People-Centered · Supportive · Team-First)</span>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">
+            Servant Leader<br>
+            (People-First · Supportive · Empowering)
+          </span>
         </li>
       </ul>
     </div>
@@ -217,13 +225,14 @@
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Catherine is one of the most reliable and steady contributors in the Diamond League class —
-      a quintessential <strong>Player-Coach</strong> who elevates culture, consistency, and preparation on every team she joins.
-      She produces clean, client-ready work, submits on time, and brings a composed maturity that firms love
-      in early-career talent.
+      Catherine is one of the most reliable and steady contributors in the Diamond League class — a classic
+      <strong>Player-Coach archetype</strong> who quietly raises the floor for every group she’s in. She submits work on time,
+      keeps it clean and client-ready, and approaches each assignment with a professional, no-drama mindset that firms
+      consistently value in early analyst classes.
       <br><br>
-      With a strong rowing background, private equity exposure, and relevant academic grounding,
-      Catherine has the foundation, attitude, and discipline of a future high-performing analyst.
+      With a Financial Economics foundation, Division I rowing, and exposure to private equity and investment banking
+      environments, she brings a mature, structured approach to both her work and her teams — more substance than flash,
+      but impressively consistent across the board.
     </p>
   </section>
 
@@ -231,11 +240,11 @@
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Extremely consistent performer:</strong> Always submits high-quality, polished work on time.</li>
-      <li><strong>Player-Coach wiring:</strong> Principled, structured, dependable — the teammate everyone trusts.</li>
-      <li><strong>Strong academic + professional base:</strong> Financial Economics major with IB, PE, and valuation exposure.</li>
-      <li><strong>High character + poise:</strong> Brings calm confidence and professionalism to every environment.</li>
-      <li><strong>Detail-aligned communicator:</strong> Clear, organized, and composed under pressure.</li>
+      <li><strong>Exceptionally consistent operator:</strong> Delivers on-time, polished assignments that are close to client-ready without heavy editing.</li>
+      <li><strong>Player-Coach wiring:</strong> Leads through standards, example, and organization rather than volume — the type teammates naturally trust.</li>
+      <li><strong>Professional polish:</strong> Comfortable in structured, high-expectation environments (PE internship, IB exposure, long-term family assistant role).</li>
+      <li><strong>Competitive athletic résumé:</strong> High-level rowing background with meaningful leadership and responsibility experience.</li>
+      <li><strong>Dependable teammate:</strong> Shows up prepared, steady, and aligned with expectations — low-maintenance, high-trust profile.</li>
     </ul>
   </section>
 
@@ -243,9 +252,9 @@
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue sharpening valuation storytelling to complement technical fundamentals.</li>
-      <li>Look for early moments to speak up in group settings rather than defaulting to supporting role.</li>
-      <li>Keep building live-case assertiveness to match her strong preparation and work quality.</li>
+      <li>Continue sharpening technical fluency (valuation frameworks, modeling reps) to fully match her consistency and work ethic.</li>
+      <li>Look for early moments to be more vocal in case settings, not just in execution — her judgment is strong enough to drive the discussion.</li>
+      <li>Keep turning rich experiences (Henley, PE sector work, FSYC leadership) into tight, memorable interview stories.</li>
     </ul>
   </section>
 
@@ -253,13 +262,12 @@
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Catherine projects as a <strong>Round 1–2 MAP prospect</strong> with one of the highest consistency floors
-      in the class. Her maturity, discipline, and Player-Coach leadership style make her a cultural asset,
-      and with continued reps she can grow into a highly dependable, steadying analyst on any banking team.
+      Catherine projects as a <strong>Round 1–2 MAP prospect</strong> with a very high consistency floor and strong culture fit.
+      She’s the kind of Player-Coach profile that quietly stabilizes an analyst class — dependable, mature, and coachable —
+      and with continued technical reps she can evolve into a highly trusted, go-to execution analyst on a deal team.
     </p>
   </section>
 
 </div>
 </body>
 </html>
-
