--- a/catherine-ruf.html
+++ b/catherine-ruf.html
@@ -171,7 +171,7 @@
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.3</div>
+      <div class="grade-score">93</div>
       <div class="grade-tier">Round 1–2 Candidate</div>
       <div class="grade-note">Reliable, steady, and culture-positive contributor</div>
     </div>
@@ -184,7 +184,7 @@
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span>School</span><span class="meta-value">Columbia University</span></li>
+        <li><span>College</span><span class="meta-value">Columbia University</span></li>
         <li><span>Major</span><span class="meta-value">Financial Economics</span></li>
         <li><span>Minor</span><span class="meta-value">N/A</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
@@ -206,14 +206,14 @@
           <span>Personality</span>
           <span class="meta-value">
             9. Player-Coach<br>
-            (Principled Personality · Stability · Organizing Influence)
+            (Principled Personality · Team Stewardship · Process Organization)
           </span>
         </li>
         <li>
           <span>Leadership</span>
           <span class="meta-value">
-            Servant Leader<br>
-            (People-First · Supportive · Empowering)
+            Take One for the Team<br>
+            (Servant Leader · Service Orientation · Team-First Mindset)
           </span>
         </li>
       </ul>
@@ -271,3 +271,4 @@
 </div>
 </body>
 </html>
+
