--- a/cosmo-fusco.html
+++ b/cosmo-fusco.html
@@ -198,7 +198,7 @@
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">8.5</div>
+      <div class="grade-score">85</div>
       <div class="grade-tier">Round 3–4 Candidate</div>
       <div class="grade-note">High-upside quant profile with early MAP momentum</div>
     </div>
@@ -210,7 +210,7 @@
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span>School</span><span class="meta-value">University of Pennsylvania</span></li>
+        <li><span>College</span><span class="meta-value">University of Pennsylvania</span></li>
         <li><span>Major</span><span class="meta-value">Economics &amp; Mathematics</span></li>
         <li><span>Minor</span><span class="meta-value">Statistics</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
@@ -231,13 +231,15 @@
         <li>
           <span>Personality</span>
           <span class="meta-value">
-            11. Point Guard (Relationship-Oriented Personality · Optimism · Steady Presence)
+            11. Point Guard<br>
+            (Steady Personality · Big-Picture Awareness · Team Facilitation)
           </span>
         </li>
         <li>
           <span>Leadership</span>
           <span class="meta-value">
-            Pass the Baton — Democratic (Democratic Leader · Collaborative Decision-Making · Team Buy-In)
+            Pass the Baton<br>
+            (Democratic Leader · Team Input · Shared Decision Making)
           </span>
         </li>
       </ul>
@@ -300,5 +302,6 @@
 </div>
 </body>
 </html>
+
 
 
