--- a/dylan-tung.html
+++ b/dylan-tung.html
@@ -48,7 +48,7 @@
     min-width: 180px;
     padding: 0.75rem 1rem;
     border-radius: 10px;
-    background: rgba(255,255,255,0.15); /* FIXED */
+    background: rgba(255,255,255,0.15);
     border: 1px solid rgba(255,255,255,0.3);
     backdrop-filter: blur(4px);
   }
@@ -167,55 +167,67 @@
 
 <div class="prospect-page">
 
-  <!-- ============================= -->
   <!-- HERO -->
-  <!-- ============================= -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">DYLAN TUNG</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️ Prospect · Chip-on-Your-Shoulder Grinder · Investment Banking Track</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️ Prospect · Chip-on-Your-Shoulder Archetype · Investment Banking Track</p>
       <p class="prospect-subtitle">Cornell University · Polo 🐎 · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">8.8</div>
+      <div class="grade-score">88</div>
       <div class="grade-tier">Round 3–4 Candidate</div>
       <div class="grade-note">Non-traditional path with real upside and edge</div>
     </div>
   </section>
 
-  <!-- ============================= -->
   <!-- META -->
-  <!-- ============================= -->
   <section class="prospect-meta">
+
+    <!-- Prospect Info -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">Cornell University</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Viticulture &amp; Enology</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">Information Science</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Polo</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Orinda, CA</span></li>
+        <li><span>College</span><span class="meta-value">Cornell University</span></li>
+        <li><span>Major</span><span class="meta-value">Viticulture &amp; Enology</span></li>
+        <li><span>Minor</span><span class="meta-value">Information Science</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.8</span></li>
+        <li><span>Sport</span><span class="meta-value">Polo</span></li>
+        <li><span>Hometown</span><span class="meta-value">Orinda, CA</span></li>
       </ul>
     </div>
 
+    <!-- MAP Profile -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">25 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.8</span></li>
-        <li><span class="meta-key">Captain</span><span class="meta-value">Semi-pro and team standard-setter</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">2. Chip on Your Shoulder</span></li>
-        <li><span class="meta-key">Performance</span><span class="meta-value">Diamond League Fellow · A&amp;D case analyst</span></li>
+        <li><span>Official Points</span><span class="meta-value">900</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">23 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">27 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">23 / 30</span></li>
+        <li>
+          <span>Personality</span>
+          <span class="meta-value">
+            2. Chip on Your Shoulder<br>
+            (Resilient Personality · Relentless Goal Setter · High Work Ethic)
+          </span>
+        </li>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">
+            Pass the Baton<br>
+            (Democratic Leader · Team Input · Shared Decision Making)
+          </span>
+        </li>
       </ul>
     </div>
+
   </section>
 
-  <!-- ============================= -->
   <!-- OVERVIEW -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
@@ -224,50 +236,42 @@
       His Chip on Your Shoulder wiring shows up clearly: he has consistently played up against better-resourced opponents
       and entered recruiting later and from a non-traditional path, using those headwinds as motivation to close the gap.
       <br><br>
-      Between investment analyst work at Next Haven Group, revenue-generating e-commerce and content plays, and hands-on
-      operations experience in vineyards and polo programs, Dylan understands both sides of the table — how businesses
-      actually run and how investors evaluate them. When fully dialed into the MAP system, he shows clear upside as a
-      creative, resilient analyst who thinks like an operator and a marketer, not just a model-builder.
+      His work across investing, entrepreneurship, operations, and athletics gives him a differentiated lens — he thinks
+      like someone who has lived the operator side, not just analyzed it. When fully locked into the MAP system, Dylan
+      shows upside as a creative, resilient analyst with a marketer’s eye and an operator’s intuition.
     </p>
   </section>
 
-  <!-- ============================= -->
   <!-- STRENGTHS -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Chip-on-your-shoulder mindset:</strong> Uses later start in IB recruiting and resource gaps in polo as motivation to outwork peers and close the gap.</li>
-      <li><strong>Strong academic foundation:</strong> 3.8 GPA in a rigorous science-oriented major plus quantitative coursework in economics, chemistry, and statistics.</li>
-      <li><strong>Real investing exposure:</strong> Investment analyst intern experience sourcing deals, analyzing markets, and evaluating niche B2B services.</li>
-      <li><strong>Entrepreneurial track record:</strong> Built and monetized e-commerce and social media accounts, generating $65,000+ in GMV and scaling audiences to 30,000+ followers.</li>
-      <li><strong>High-performance athletics:</strong> Semi-professional polo background and Cornell D-I polo experience demonstrate discipline, composure, and decision-making under pressure.</li>
-      <li><strong>Leadership and responsibility:</strong> Resident Advisor for 450+ undergrads, handling crises, conflict resolution, and community-building on campus.</li>
+      <li><strong>Chip-on-your-shoulder mindset:</strong> Uses late start in IB recruiting and resource gaps in polo as fuel to outwork peers.</li>
+      <li><strong>Strong academic foundation:</strong> 3.8 GPA with rigorous science and quantitative coursework.</li>
+      <li><strong>Real investing exposure:</strong> Analyst experience sourcing deals, analyzing niche markets, and evaluating B2B services.</li>
+      <li><strong>Entrepreneurial execution:</strong> Built e-commerce + content operations generating $65K+ in GMV and tens of thousands of followers.</li>
+      <li><strong>High-performance athletics:</strong> National-level polo and Cornell D-I polo experience requiring discipline and composure under pressure.</li>
+      <li><strong>Leadership experience:</strong> RA for 450+ students — real crisis management, conflict resolution, and community building.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Improve reliability around deadlines and case competition deliverables to align execution with his demonstrated academic and professional upside.</li>
-      <li>Continue to formalize IB-specific technical skills (accounting, valuation frameworks, and modeling reps) to complement his operator and marketer lens.</li>
-      <li>Sharpen interview storytelling — turning rich experiences in polo, entrepreneurship, and investing into concise, structured answers that land quickly with bankers.</li>
+      <li>Strengthen deadline reliability and multi-week execution to align performance with his underlying upside.</li>
+      <li>Continue building IB-specific technical reps in valuation, accounting, and modeling.</li>
+      <li>Refine interview storytelling using structured, banker-friendly narratives drawn from rich entrepreneurial + athletic experiences.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- PROJECTION -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      Round 3–4 MAP prospect with clear “upside pick” characteristics — a non-traditional background, strong GPA,
-      and a gritty, chip-on-your-shoulder mentality. If reliability and deadline discipline catch up to his creativity
-      and experience base, Dylan has the potential to become a differentiated analyst who brings an operator’s mindset,
-      entrepreneurial edge, and global perspective to an investment banking or growth-equity seat.
+      Dylan projects as a <strong>Round 3–4 MAP prospect</strong> with clear upside characteristics — grit, resourcefulness,
+      and a differentiated background. With continued reliability and technical reps, he could grow into a uniquely
+      valuable analyst who blends operator intuition with entrepreneurial creativity and a resilient, competitor mindset.
     </p>
   </section>
 
