--- a/elizabeth-oyler.html
+++ b/elizabeth-oyler.html
@@ -1,6 +1,8 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Elizabeth Oyler — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
@@ -12,16 +14,24 @@
     color: #1a1a1a;
   }
 
+  /* HERO */
   .prospect-hero {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: nowrap;
     gap: 1.25rem;
     padding: 1.5rem 1.25rem;
     border-radius: 12px;
     background: #2E5084;
     color: #ffffff;
     margin-bottom: 1.5rem;
+  }
+
+  .prospect-hero-main {
+    flex: 1 1 60%;
+    max-width: 70%;
+    min-width: 260px;
   }
 
   .prospect-name {
@@ -33,7 +43,7 @@
   }
 
   .prospect-tagline {
-    margin: 0 0 0.15rem;
+    margin: 0 0 0.18rem;
     font-size: 0.95rem;
     font-weight: 600;
   }
@@ -45,10 +55,11 @@
   }
 
   .prospect-grade-card {
-    min-width: 180px;
+    flex: 0 0 200px;
+    width: 200px;
     padding: 0.75rem 1rem;
     border-radius: 10px;
-    background: rgba(255,255,255,0.15); /* FIXED */
+    background: rgba(255,255,255,0.15);
     border: 1px solid rgba(255,255,255,0.3);
     backdrop-filter: blur(4px);
   }
@@ -77,6 +88,7 @@
     opacity: 0.85;
   }
 
+  /* META */
   .prospect-meta {
     display: flex;
     flex-wrap: wrap;
@@ -120,6 +132,7 @@
     margin-left: 1rem;
   }
 
+  /* SECTIONS */
   .prospect-section {
     margin-bottom: 1.25rem;
     padding: 1rem 1.1rem;
@@ -164,114 +177,121 @@
     }
   }
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- ============================= -->
   <!-- HERO -->
-  <!-- ============================= -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">ELIZABETH OYLER</h1>
       <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Give-and-Go Leader · Investment Banking Track</p>
-      <p class="prospect-subtitle">WashU in St. Louis · Swimming &amp; Diving 🏊‍♀️ · Class of 2028</p>
+      <p class="prospect-subtitle">WashU in St. Louis · Swimming & Diving 🏊‍♀️ · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.7</div>
+      <div class="grade-score">9.9</div>
       <div class="grade-tier">Round 1 Candidate</div>
       <div class="grade-note">Elite reliability, emotional intelligence, and upside</div>
     </div>
   </section>
 
-  <!-- ============================= -->
   <!-- META -->
-  <!-- ============================= -->
   <section class="prospect-meta">
+
+    <!-- PROSPECT INFO -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">WashU in St. Louis</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Psychology</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">French</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Swimming &amp; Diving</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Chicago, IL</span></li>
+        <li><span>School</span><span class="meta-value">WashU in St. Louis</span></li>
+        <li><span>Major</span><span class="meta-value">Psychology</span></li>
+        <li><span>Minor</span><span class="meta-value">French</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.77</span></li>
+        <li><span>Sport</span><span class="meta-value">Swimming &amp; Diving 🏊‍♀️</span></li>
+        <li><span>Hometown</span><span class="meta-value">Chicago, IL</span></li>
       </ul>
     </div>
 
+    <!-- MAP PROFILE -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">6 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.77</span></li>
-        <li><span class="meta-key">Captain</span><span class="meta-value">Diamond League Investments Captain</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">4. Give-and-Go</span></li>
-        <li><span class="meta-key">Performance</span>
+        <li><span>Official Points</span><span class="meta-value">1945.5</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">2 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">6 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">1 / 30</span></li>
+        <li>
+          <span>Personality</span>
           <span class="meta-value">
-            First on every MAP assignment · completed all Extra Reps · leadership exceeds rank
+            4. Give-and-Go<br>
+            (Empathetic Personality · Generosity · People-First Mindset)
+          </span>
+        </li>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">
+            Servant Leader<br>
+            (People-First · Supportive · Empowering)
           </span>
         </li>
       </ul>
     </div>
+
   </section>
 
-  <!-- ============================= -->
   <!-- OVERVIEW -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      One of the most special prospects in the entire Diamond League class. Elizabeth was the first to submit 
-      every single MAP assignment — and uniquely completed all voluntary “Extra Rep” tasks, a rare indicator of 
-      internal drive and professional maturity. Her rank already places her in the top 10, but her leadership 
-      impact and consistency actually outperform that number by a wide margin.
+      Elizabeth is one of the clearest Round 1 profiles in the Diamond League — a rare combination of elite reliability,
+      emotional intelligence, academic strength, and leadership maturity. She was the first to submit every assignment
+      across the entire fellowship and uniquely completed all voluntary “Extra Reps,” a signal of internal drive and
+      professionalism that firms consistently value.
       <br><br>
-      As a Give-and-Go personality, she plays a stabilizing, emotionally intelligent role on any team — offering 
-      support, resolving issues, and maintaining cohesion without ever seeking credit. Layer that with captain-level 
-      leadership on the Guggenheim C&amp;R case, strong research experience, and a deep service portfolio, and Elizabeth 
-      profiles as one of the highest-floor, highest-character early candidates across the MAP ecosystem.
+      As a Give-and-Go personality, she plays a stabilizing, people-first role on any team — offering support,
+      resolving issues, and keeping morale high without ever seeking credit. When paired with her captain-level leadership
+      on the Guggenheim C&amp;R case, research experience, and service background, Elizabeth becomes one of the most
+      complete early-career prospects across the MAP ecosystem.
     </p>
   </section>
 
-  <!-- ============================= -->
   <!-- STRENGTHS -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Unmatched reliability:</strong> First to submit every assignment; completed all Extra Reps (extremely rare).</li>
-      <li><strong>Give-and-Go emotional intelligence:</strong> Stabilizes teams, supports peers, builds trust, and elevates morale.</li>
-      <li><strong>Leadership beyond rank:</strong> Captain of Diamond League C&amp;R team; execution and culture impact exceed her #6 finish.</li>
-      <li><strong>Academic excellence:</strong> 3.77 GPA · strong coursework in capital markets, statistics, and managerial environments.</li>
-      <li><strong>Research maturity:</strong> Hands-on psychology lab experience + entrepreneurship programs work at UChicago Polsky Center.</li>
-      <li><strong>Service-driven operator:</strong> DEI committee work, lifeguard leadership, and youth programs all reinforce character and responsibility.</li>
+      <li><strong>Elite reliability:</strong> First to submit every assignment; completed all Extra Reps (extremely rare).</li>
+      <li><strong>Give-and-Go emotional intelligence:</strong> Stabilizes teams, elevates morale, and supports peers with authenticity.</li>
+      <li><strong>Leadership beyond rank:</strong> Captain on Diamond League C&amp;R case; trusted voice in all team settings.</li>
+      <li><strong>Academic strength:</strong> 3.77 GPA with strong coursework in psychology, research design, statistics, and behavior.</li>
+      <li><strong>Professional maturity:</strong> UChicago Polsky Center experience, lab research, and youth leadership all reinforce discipline and responsibility.</li>
+      <li><strong>Culture-setter:</strong> Embodies professionalism, humility, and consistency — qualities firms screen heavily for.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue asserting her voice earlier in high-stakes group discussions; her insights carry weight.</li>
-      <li>Expand technical fundamentals (valuation frameworks, modeling speed) to match her leadership ceiling.</li>
-      <li>Practice delivering more concise, high-impact responses during interviews.</li>
+      <li>Continue asserting her voice earlier in high-stakes case discussions; her judgment is strong enough to anchor conversation flow.</li>
+      <li>Deepen technical fundamentals (valuation frameworks, modeling comfort) to match her high leadership ceiling.</li>
+      <li>Sharpen conciseness in interview responses — high-quality content delivered with speed will elevate her even further.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- PROJECTION -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A clear Round 1 MAP prospect — elite reliability, emotional intelligence, and leadership upside. Elizabeth’s 
-      consistency, character, and execution make her the type of analyst candidates model themselves after. With 
-      continued technical reps, she projects as a future culture-setter who will elevate any deal team from day one.
+      Elizabeth is a marquee Round 1 MAP prospect — one of the highest-character, highest-consistency profiles in the
+      class. Her emotional intelligence, execution, and leadership maturity give her one of the highest floors in the
+      fellowship, and with continued technical development, she projects as a future culture-setter on any deal team.
     </p>
   </section>
 
 </div>
+</body>
+</html>
+
