--- a/ella-miller.html
+++ b/ella-miller.html
@@ -1,6 +1,8 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Ella Miller — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
@@ -69,7 +71,6 @@
   .grade-tier {
     font-size: 0.8rem;
     font-weight: 600;
-    margin-bottom: 0.1rem;
   }
 
   .grade-note {
@@ -151,25 +152,14 @@
   .section-list li {
     margin-bottom: 0.35rem;
   }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
 </style>
+
+</head>
+<body>
 
 <div class="prospect-page">
 
-  <!-- ============================= -->
   <!-- HERO -->
-  <!-- ============================= -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">ELLA MILLER</h1>
@@ -179,102 +169,105 @@
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.2</div>
-      <div class="grade-tier">Round 3–4 Candidate</div>
+      <div class="grade-score">93</div>
+      <div class="grade-tier">Round 1–2 Candidate</div>
       <div class="grade-note">High-character, reliable, and strong behavioral upside</div>
     </div>
   </section>
 
-  <!-- ============================= -->
   <!-- META -->
-  <!-- ============================= -->
   <section class="prospect-meta">
+
+    <!-- Prospect Info -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">Amherst College</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">American Studies</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">N/A</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Squash</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Greenwich, CT</span></li>
+        <li><span>College</span><span class="meta-value">Amherst College</span></li>
+        <li><span>Major</span><span class="meta-value">American Studies</span></li>
+        <li><span>Minor</span><span class="meta-value">N/A</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.92</span></li>
+        <li><span>Sport</span><span class="meta-value">Squash</span></li>
+        <li><span>Hometown</span><span class="meta-value">Greenwich, CT</span></li>
       </ul>
     </div>
 
+    <!-- MAP Profile -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">23 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.92</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">6. Hustler</span></li>
-        <li><span class="meta-key">Performance</span>
+        <li><span>Official Points</span><span class="meta-value">1413</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">7 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">23 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">7 / 30</span></li>
+        <li>
+          <span>Personality</span>
           <span class="meta-value">
-            On-time, reliable, strong communicator; excellent behavioral interview upside
+            6. Hustler<br>
+            (Creative Problem-Solving Personality · Initiative · Unwavering Self-Belief)
+          </span>
+        </li>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">
+            Democratic Leader<br>
+            (Collaborative Decision-Making · Team Input · Shared Ownership)
           </span>
         </li>
       </ul>
     </div>
+
   </section>
 
-  <!-- ============================= -->
   <!-- OVERVIEW -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
       A polished, high-character Hustler prospect with elite academic consistency and standout behavioral upside.
       Ella pairs a 3.92 GPA with a high-performance squash background — competing as a top-25 nationally ranked
       junior player, top-49 globally, and now a starter on a top-13 collegiate team. Her work ethic is evident in
-      both her academic and athletic commitments: attending office hours consistently, revising work through
-      multiple drafts, and taking initiative on racquet skills and conditioning outside of scheduled practice times.
+      both her academic and athletic commitments, consistently taking extra reps and showing strong initiative.
       <br><br>
-      Ella’s personality assessment — identifying strongly with the Hustler type — mirrors how she shows up in the
-      MAP environment: dependable, engaged, thoughtful, and growth-oriented. Her volunteer work, fitness
-      discipline, leadership experience as a former captain, and research exposure all reinforce her maturity and
-      reliability. With continued technical development, she has clear early-round behavioral interview potential
-      and meaningful long-term upside for investment banking recruiting.
+      In the MAP environment, Ella presents as dependable, engaged, thoughtful, and growth-oriented — a direct match
+      for her Hustler personality profile. With continued technical development, she has early-round behavioral
+      interview potential and meaningful long-term upside across investment banking pipelines.
     </p>
   </section>
 
-  <!-- ============================= -->
   <!-- STRENGTHS -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Hustler motor:</strong> High-initiative personality; consistently seeks extra reps academically and athletically.</li>
-      <li><strong>Elite discipline:</strong> Top-ranked squash background; rigorous training habits beyond team requirements.</li>
-      <li><strong>Academic excellence:</strong> 3.92 GPA with strong coursework and LSE comparative economics experience.</li>
-      <li><strong>Strong communication:</strong> Clear, thoughtful, well-prepared verbal responses; poised for behavioral success.</li>
-      <li><strong>Early finance exposure:</strong> IB internship at William Hood & Company with hands-on modeling and CIM work.</li>
-      <li><strong>Leadership maturity:</strong> Former captain, SAAC representative, health/wellness instructor, and yearbook editor.</li>
-      <li><strong>High character:</strong> Service-driven, dependable, and consistent across roles and commitments.</li>
+      <li><strong>Hustler motor:</strong> High-initiative profile; consistently seeks extra academic and athletic reps.</li>
+      <li><strong>Elite discipline:</strong> Top-ranked squash résumé with rigorous training habits beyond team requirements.</li>
+      <li><strong>Academic excellence:</strong> 3.92 GPA with comparative economics experience at LSE.</li>
+      <li><strong>Strong communication:</strong> Clear, thoughtful, well-prepared verbal responses.</li>
+      <li><strong>Early finance exposure:</strong> IB internship at William Hood & Company with hands-on modeling and CIM experience.</li>
+      <li><strong>Leadership maturity:</strong> Former captain, SAAC representative, and health/wellness instructor.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Continue strengthening technical fundamentals (core valuation, comps, modeling fluency).</li>
-      <li>Increase confidence in high-speed, high-stakes group discussions to match behavioral strengths.</li>
-      <li>Practice delivering more concise, punchy responses during timed interview formats.</li>
+      <li>Continue strengthening technical fundamentals (valuation, comps, modeling fluency).</li>
+      <li>Increase confidence in high-speed case discussions to match behavioral strengths.</li>
+      <li>Sharpen concise delivery in timed interview settings.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- PROJECTION -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A strong Round 3–4 MAP prospect with clear upside as technical skills advance. Ella combines
-      reliability, discipline, academic excellence, and elite behavioral poise — projecting as a highly coachable,
-      high-character candidate for early investment banking recruiting. With continued technical reps, she profiles
-      as a future high-quality analyst who will add maturity, steadiness, and work ethic to any deal team.
+      A strong Round 1–2 MAP prospect with clear upside as her technical foundation deepens.
+      Ella offers reliability, discipline, maturity, and elite behavioral poise — projecting as a highly coachable,
+      high-character candidate who will strengthen any analyst class from day one.
     </p>
   </section>
 
 </div>
+
+</body>
+</html>
