--- a/ennika-carlson.html
+++ b/ennika-carlson.html
@@ -1,6 +1,8 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Ennika Carlson — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
@@ -69,7 +71,6 @@
   .grade-tier {
     font-size: 0.8rem;
     font-weight: 600;
-    margin-bottom: 0.1rem;
   }
 
   .grade-note {
@@ -151,25 +152,14 @@
   .section-list li {
     margin-bottom: 0.35rem;
   }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
 </style>
+
+</head>
+<body>
 
 <div class="prospect-page">
 
-  <!-- ============================= -->
   <!-- HERO -->
-  <!-- ============================= -->
   <section class="prospect-hero">
     <div class="prospect-hero-main">
       <h1 class="prospect-name">ENNIKA CARLSON</h1>
@@ -179,103 +169,109 @@
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.6</div>
+      <div class="grade-score">97</div>
       <div class="grade-tier">Round 1 Candidate</div>
       <div class="grade-note">Pro-ready maturity, elite EQ, captain-level leadership</div>
     </div>
   </section>
 
-  <!-- ============================= -->
   <!-- META -->
-  <!-- ============================= -->
   <section class="prospect-meta">
+
+    <!-- Prospect Info -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">School</span><span class="meta-value">Harvard University</span></li>
-        <li><span class="meta-key">Major</span><span class="meta-value">Applied Mathematics</span></li>
-        <li><span class="meta-key">Minor</span><span class="meta-value">N/A</span></li>
-        <li><span class="meta-key">Year</span><span class="meta-value">2028</span></li>
-        <li><span class="meta-key">Sport</span><span class="meta-value">Swimming &amp; Diving</span></li>
-        <li><span class="meta-key">Hometown</span><span class="meta-value">Dana Point, CA</span></li>
+        <li><span>College</span><span class="meta-value">Harvard University</span></li>
+        <li><span>Major</span><span class="meta-value">Applied Mathematics</span></li>
+        <li><span>Minor</span><span class="meta-value">N/A</span></li>
+        <li><span>Year</span><span class="meta-value">2028</span></li>
+        <li><span>GPA</span><span class="meta-value">3.52</span></li>
+        <li><span>Sport</span><span class="meta-value">Swimming &amp; Diving</span></li>
+        <li><span>Hometown</span><span class="meta-value">Dana Point, CA</span></li>
       </ul>
     </div>
 
+    <!-- MAP Profile -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span class="meta-key">Fall Rank</span><span class="meta-value">2 / 63</span></li>
-        <li><span class="meta-key">GPA</span><span class="meta-value">3.52</span></li>
-        <li><span class="meta-key">Personality</span><span class="meta-value">14. Two-Way Player</span></li>
-        <li><span class="meta-key">Performance</span>
+        <li><span>Official Points</span><span class="meta-value">1766</span></li>
+        <li><span>Cumulative Rank</span><span class="meta-value">3 / 63</span></li>
+        <li><span>Phase 1 Rank</span><span class="meta-value">2 / 63</span></li>
+        <li><span>Phase 2 Rank</span><span class="meta-value">3 / 30</span></li>
+        <li>
+          <span>Personality</span>
           <span class="meta-value">
-            Diamond League Captain · elite emotional intelligence · top 1% MAP performer
+            14. Two-Way Player<br>
+            (Balanced Personality · Adaptive Communication · Coachable Consistency)
+          </span>
+        </li>
+        <li>
+          <span>Leadership</span>
+          <span class="meta-value">
+            Servant Leader<br>
+            (Empathy · Service Orientation · People-First Support)
           </span>
         </li>
       </ul>
     </div>
+
   </section>
 
-  <!-- ============================= -->
   <!-- OVERVIEW -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      One of the most complete prospects in the MAP ecosystem — a polished, emotionally intelligent leader with 
-      pro-ready presence and captain-level execution. Ennika finished #2 out of 63 in the Fall Rankings and earned 
-      Diamond League Captain honors after placing in the top 1% of 250+ MAP athletes.
+      One of the most complete prospects in the MAP ecosystem — a polished, emotionally intelligent leader with
+      pro-ready presence and captain-level execution. Ennika finished #3 out of 63 in the Cumulative Rankings and
+      ranked top-3 in both Phase 1 and Phase 2, underscoring rare consistency across all MAP metrics.
       <br><br>
-      As a Two-Way Player personality type, she seamlessly blends high-EQ relationship management with strong analytical 
-      and project execution ability. Teammates consistently seek her out for guidance, and coaches trust her judgment in 
-      navigating group dynamics and supporting team morale. Her ability to listen first, process with empathy, and act 
-      decisively makes her one of the highest-floor behavioral interview candidates in the entire class.
+      As a Two-Way Player personality, she blends high-EQ relationship management with structured analytical execution.
+      Teammates frequently turn to her for judgment, stability, and conflict resolution — while coaches rely on her
+      maturity and communication instincts in the most complex team environments.
       <br><br>
-      Professionally, her résumé spans investment banking work through MAP x Guggenheim, commercial real estate 
-      experience at Berkshire Hathaway, cross-cultural teaching in Vietnam, long-term mentorship roles, and 
-      entrepreneurship. Layered with Division I athletics, national finalist diving accolades, and a decade of 
-      service-driven community involvement, she projects as an immediate culture-add to any firm.
+      Professionally, she brings a multi-dimensional résumé: MAP x Guggenheim case leadership, commercial real estate
+      exposure through Berkshire Hathaway, cross-cultural teaching experience in Vietnam, long-term mentorship roles,
+      and entrepreneurship. Layered with Division I athletics and national diving accolades, she embodies the exact
+      early-career profile top firms seek: grounded, poised, reliable, and unshakably team-oriented.
     </p>
   </section>
 
-  <!-- ============================= -->
   <!-- STRENGTHS -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Elite emotional intelligence:</strong> Go-to peer for sensitive conversations; trusted by coaches for team dynamics insight.</li>
-      <li><strong>Two-Way Player versatility:</strong> Polished communicator and strong executor across technical and people-facing tasks.</li>
-      <li><strong>MAP excellence:</strong> Diamond League Captain · top 1% performer · flawless execution on Guggenheim case deliverables.</li>
-      <li><strong>Professional readiness:</strong> Real estate experience at Berkshire Hathaway + MAP banking leadership.</li>
-      <li><strong>Service &amp; impact:</strong> Guide Dogs of America ambassador, cross-cultural math/skills educator in Vietnam.</li>
-      <li><strong>Long-term leadership:</strong> 14 years of piano; multi-year educator; dog-training entrepreneur donating proceeds to service causes.</li>
-      <li><strong>High athletic pedigree:</strong> 5× Junior National Finalist; D1 athlete balancing 20+ hrs weekly training with academics.</li>
+      <li><strong>Elite emotional intelligence:</strong> Trusted team stabilizer; reads group dynamics with uncommon maturity.</li>
+      <li><strong>Two-Way versatility:</strong> Balances analytical execution with polished communication and EQ.</li>
+      <li><strong>MAP excellence:</strong> Top-3 in all major rankings; consistent captain-level performance.</li>
+      <li><strong>Professional readiness:</strong> Berkshire Hathaway real estate + MAP banking leadership.</li>
+      <li><strong>Service-driven:</strong> Guide Dogs of America ambassador; teacher and mentor in Vietnam.</li>
+      <li><strong>Long-term leadership:</strong> Multi-year educator; entrepreneur; piano discipline; dog-training initiative.</li>
+      <li><strong>High athletic pedigree:</strong> 5× Junior National Finalist; D1 athlete balancing rigorous training demands.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>GPA is solid but not elite — continued consistency will strengthen academic profile.</li>
-      <li>Clarify long-term industry focus; expressed interest beyond IB should be narrative-polished for interviews.</li>
+      <li>Strengthen academic consistency to raise GPA closer to top-of-class peers.</li>
+      <li>Clarify long-term industry direction to sharpen interview narrative beyond MAP case exposure.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
   <!-- PROJECTION -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A high-character, pro-ready Round 1 MAP prospect with elite emotional intelligence, strong leadership instincts, 
-      and a versatile, Two-Way Player skill set. Ennika projects as an immediate culture-add and a future anchor on any 
-      deal team. With narrative polish and continued academic consistency, she will stand out to top-tier banking and 
-      consulting programs as a uniquely balanced and dependable analyst candidate.
+      A pro-ready Round 1 MAP prospect with elite EQ, servant-leadership instincts, and a uniquely balanced Two-Way
+      Player profile. Ennika brings immediate cultural value and long-term leadership potential to any analyst class,
+      projecting as one of the most dependable and complete candidates in the 2028 pipeline.
     </p>
   </section>
 
 </div>
+
+</body>
+</html>
