--- a/elizabeth-oyler.html
+++ b/elizabeth-oyler.html
@@ -14,24 +14,16 @@
     color: #1a1a1a;
   }
 
-  /* HERO */
   .prospect-hero {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: nowrap;
     gap: 1.25rem;
     padding: 1.5rem 1.25rem;
     border-radius: 12px;
     background: #2E5084;
     color: #ffffff;
     margin-bottom: 1.5rem;
-  }
-
-  .prospect-hero-main {
-    flex: 1 1 60%;
-    max-width: 70%;
-    min-width: 260px;
   }
 
   .prospect-name {
@@ -43,7 +35,7 @@
   }
 
   .prospect-tagline {
-    margin: 0 0 0.18rem;
+    margin: 0 0 0.15rem;
     font-size: 0.95rem;
     font-weight: 600;
   }
@@ -55,8 +47,7 @@
   }
 
   .prospect-grade-card {
-    flex: 0 0 200px;
-    width: 200px;
+    min-width: 180px;
     padding: 0.75rem 1rem;
     border-radius: 10px;
     background: rgba(255,255,255,0.15);
@@ -80,7 +71,6 @@
   .grade-tier {
     font-size: 0.8rem;
     font-weight: 600;
-    margin-bottom: 0.1rem;
   }
 
   .grade-note {
@@ -88,7 +78,6 @@
     opacity: 0.85;
   }
 
-  /* META */
   .prospect-meta {
     display: flex;
     flex-wrap: wrap;
@@ -132,7 +121,6 @@
     margin-left: 1rem;
   }
 
-  /* SECTIONS */
   .prospect-section {
     margin-bottom: 1.25rem;
     padding: 1rem 1.1rem;
@@ -164,18 +152,6 @@
   .section-list li {
     margin-bottom: 0.35rem;
   }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
 </style>
 </head>
 
@@ -187,12 +163,12 @@
     <div class="prospect-hero-main">
       <h1 class="prospect-name">ELIZABETH OYLER</h1>
       <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Give-and-Go Leader · Investment Banking Track</p>
-      <p class="prospect-subtitle">WashU in St. Louis · Swimming & Diving 🏊‍♀️ · Class of 2028</p>
+      <p class="prospect-subtitle">WashU in St. Louis · Swimming &amp; Diving 🏊‍♀️ · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">9.9</div>
+      <div class="grade-score">99</div>
       <div class="grade-tier">Round 1 Candidate</div>
       <div class="grade-note">Elite reliability, emotional intelligence, and upside</div>
     </div>
@@ -201,7 +177,6 @@
   <!-- META -->
   <section class="prospect-meta">
 
-    <!-- PROSPECT INFO -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
@@ -209,13 +184,11 @@
         <li><span>Major</span><span class="meta-value">Psychology</span></li>
         <li><span>Minor</span><span class="meta-value">French</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>GPA</span><span class="meta-value">3.77</span></li>
-        <li><span>Sport</span><span class="meta-value">Swimming &amp; Diving 🏊‍♀️</span></li>
+        <li><span>Sport</span><span class="meta-value">Swimming &amp; Diving</span></li>
         <li><span>Hometown</span><span class="meta-value">Chicago, IL</span></li>
       </ul>
     </div>
 
-    <!-- MAP PROFILE -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
@@ -227,14 +200,14 @@
           <span>Personality</span>
           <span class="meta-value">
             4. Give-and-Go<br>
-            (Empathetic Personality · Generosity · People-First Mindset)
+            (Dependable Personality · Emotional Support · Team Stability)
           </span>
         </li>
         <li>
           <span>Leadership</span>
           <span class="meta-value">
             Servant Leader<br>
-            (People-First · Supportive · Empowering)
+            (Empathy · Service Orientation · People-First Support)
           </span>
         </li>
       </ul>
@@ -246,15 +219,15 @@
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Elizabeth is one of the clearest Round 1 profiles in the Diamond League — a rare combination of elite reliability,
-      emotional intelligence, academic strength, and leadership maturity. She was the first to submit every assignment
-      across the entire fellowship and uniquely completed all voluntary “Extra Reps,” a signal of internal drive and
-      professionalism that firms consistently value.
+      One of the most special prospects in the entire Diamond League class. Elizabeth was the first to submit
+      every single MAP assignment — and uniquely completed all voluntary “Extra Rep” tasks, a rare indicator of
+      internal drive and professional maturity. Her rank already places her in the top 3, but her leadership
+      impact and consistency actually outperform that number by a wide margin.
       <br><br>
-      As a Give-and-Go personality, she plays a stabilizing, people-first role on any team — offering support,
-      resolving issues, and keeping morale high without ever seeking credit. When paired with her captain-level leadership
-      on the Guggenheim C&amp;R case, research experience, and service background, Elizabeth becomes one of the most
-      complete early-career prospects across the MAP ecosystem.
+      As a Give-and-Go personality, she plays a stabilizing, emotionally intelligent role on any team — offering
+      support, resolving issues, and maintaining cohesion without seeking credit. Layer that with captain-level
+      leadership on the Guggenheim C&amp;R case, strong research experience, and a deep service portfolio, and
+      Elizabeth profiles as one of the highest-floor, highest-character early candidates across the MAP ecosystem.
     </p>
   </section>
 
@@ -262,36 +235,4 @@
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Elite reliability:</strong> First to submit every assignment; completed all Extra Reps (extremely rare).</li>
-      <li><strong>Give-and-Go emotional intelligence:</strong> Stabilizes teams, elevates morale, and supports peers with authenticity.</li>
-      <li><strong>Leadership beyond rank:</strong> Captain on Diamond League C&amp;R case; trusted voice in all team settings.</li>
-      <li><strong>Academic strength:</strong> 3.77 GPA with strong coursework in psychology, research design, statistics, and behavior.</li>
-      <li><strong>Professional maturity:</strong> UChicago Polsky Center experience, lab research, and youth leadership all reinforce discipline and responsibility.</li>
-      <li><strong>Culture-setter:</strong> Embodies professionalism, humility, and consistency — qualities firms screen heavily for.</li>
-    </ul>
-  </section>
-
-  <!-- AREAS FOR DEVELOPMENT -->
-  <section class="prospect-section">
-    <h2 class="section-title">Areas for Development</h2>
-    <ul class="section-list">
-      <li>Continue asserting her voice earlier in high-stakes case discussions; her judgment is strong enough to anchor conversation flow.</li>
-      <li>Deepen technical fundamentals (valuation frameworks, modeling comfort) to match her high leadership ceiling.</li>
-      <li>Sharpen conciseness in interview responses — high-quality content delivered with speed will elevate her even further.</li>
-    </ul>
-  </section>
-
-  <!-- PROJECTION -->
-  <section class="prospect-section">
-    <h2 class="section-title">Projection</h2>
-    <p class="section-body">
-      Elizabeth is a marquee Round 1 MAP prospect — one of the highest-character, highest-consistency profiles in the
-      class. Her emotional intelligence, execution, and leadership maturity give her one of the highest floors in the
-      fellowship, and with continued technical development, she projects as a future culture-setter on any deal team.
-    </p>
-  </section>
-
-</div>
-</body>
-</html>
-
+      <li><strong>Unmatched reliability:</stron
