--- a/elizabeth-oyler.html
+++ b/elizabeth-oyler.html
@@ -235,4 +235,36 @@
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Unmatched reliability:</stron
+      <li><strong>Unmatched reliability:</strong> First to submit every assignment; completed all Extra Reps (extremely rare).</li>
+      <li><strong>Give-and-Go emotional intelligence:</strong> Stabilizes teams, supports peers, builds trust, and elevates morale.</li>
+      <li><strong>Leadership beyond rank:</strong> Captain of Diamond League C&amp;R team; execution and culture impact exceed her #2 finish.</li>
+      <li><strong>Academic excellence:</strong> 3.77 GPA with strong coursework in markets, statistics, and managerial environments.</li>
+      <li><strong>Research maturity:</strong> Psychology lab experience + entrepreneurship programs work at UChicago Polsky Center.</li>
+      <li><strong>Service-driven operator:</strong> DEI committee leadership, lifeguard supervisor roles, and youth programming.</li>
+    </ul>
+  </section>
+
+  <!-- AREAS FOR DEVELOPMENT -->
+  <section class="prospect-section">
+    <h2 class="section-title">Areas for Development</h2>
+    <ul class="section-list">
+      <li>Assert her voice earlier in high-stakes team discussions; her insights carry weight.</li>
+      <li>Continue expanding technical fundamentals (valuation frameworks, modeling fluency).</li>
+      <li>Practice more concise, punchy answers for timed formats like HireVue or superdays.</li>
+    </ul>
+  </section>
+
+  <!-- PROJECTION -->
+  <section class="prospect-section">
+    <h2 class="section-title">Projection</h2>
+    <p class="section-body">
+      A clear Round 1 MAP prospect — elite reliability, emotional intelligence, and leadership upside. Elizabeth’s
+      consistency, character, and execution make her the type of analyst candidates model themselves after. With
+      continued technical reps, she projects as a future culture-setter who will elevate any deal team from day one.
+    </p>
+  </section>
+
+</div>
+</body>
+</html>
+
